vlib/v/checker/tests/enum_redeclare_err.vv
@[flag]
pub enum Enum {
	a
}

@[flag]
pub enum Enum {
	a
}
